--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -551,7 +551,7 @@ p {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 50px 0;
+  padding: 55px 0;
   overflow: hidden;
 }
 
@@ -561,7 +561,7 @@ section {
 
 .section-title {
   text-align: center;
-  padding: 15px 15px 25px 15px;
+  padding: 0 15px 25px 15px;
 }
 
 .section-title h2 {
@@ -749,7 +749,7 @@ Courses
 # Teachers
 --------------------------------------------------------------*/
 .teachers {
-  background-color: #DEE2E2;
+  background: url("../img/Selfcare/banniere.jpg") no-repeat;
 }
 
 .teacher::before {
