--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -450,7 +450,8 @@ p {
 #hero {
   width: 100%;
   height: 90vh;
-  background: url("../img/Selfcare/banniere2.jpg") top center;
+  background: url("../img/Selfcare/banniere.jpg"
+  ) top center;
   background-size: cover;
   position: relative;
   margin-bottom: -200px;
@@ -751,7 +752,7 @@ Courses
 # Teachers
 --------------------------------------------------------------*/
 .teachers {
-  background: url("../img/Selfcare/banniere.jpg") no-repeat;
+  background: url("../img/Selfcare/banniere2.jpg") no-repeat;
 }
 
 .teacher::before {
